--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>УЛЬТИМА 🔝</title>
   </head>
   <body bgcolor="#b38fab"/>
-    <a size="35" href=https://ultimatop.github.io/group><img src="logo30x30.png"/>УЛЬТИМА</a>
+    <a size="35%" href=https://ultimatop.github.io/group><img src="logo30x30.png"/>УЛЬТИМА</a>
   </body>
 </html>
