--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>УЛЬТИМА 🔝</title>
   </head>
   <body bgcolor="#b38fab"/>
-    <a size=50 href=https://ultimatop.github.io/group><img src="logo30x30.png"/>УЛЬТИМА</a>
+    <a size="100" href=https://ultimatop.github.io/group><img src="logo30x30.png">УЛЬТИМА</a>
+    <input id="search" name="search" type="text" size="40" align="right">
+    <button id="run" name="search_b">Искать собыие</button>
+    <br>
+    <h1>Новости</h1>
+    <h2>28.01.2024</h2>
   </body>
 </html>
