--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>УЛЬТИМА 🔝</title>
   </head>
   <body bgcolor="#b38fab"/>
-    <a size="100" href=https://ultimatop.github.io/group><img src="logo30x30.png">УЛЬТИМА</a>
+    <a size="100" href=https://ultimatop.github.io/group><img src="logo.jpg" width="30" heigh="30">УЛЬТИМА</a>
     <input id="search" name="search" type="text" size="40" align="right">
     <button id="run" name="search_b">Искать собыие</button>
     <br>
