--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>УЛЬТИМА 🔝</title>
   </head>
   <body bgcolor="#b38fab"/>
-    <a size="100" href=https://ultimatop.github.io/group><img src="logo.jpg" width="30" heigh="30">УЛЬТИМА</a>
+    <h1 href=https://ultimatop.github.io/group><img src="logo.jpg" width="70" heigh="70">УЛЬТИМА</h1>
     <input id="search" name="search" type="text" size="40" align="right">
     <button id="run" name="search_b">Искать собыие</button>
     <br>
-    <h1>Новости</h1>
-    <h2>28.01.2024</h2>
+    <h2>Новости</h2>
+    <h3>28.01.2024</h3>
   </body>
 </html>
