--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1 href=https://ultimatop.github.io/group><img src="logo.jpg" width="70" heigh="70">УЛЬТИМА</h1>
     <input id="search" name="search" type="text" size="40" align="right">
     <button id="run" name="search_b">Искать собыие</button>
+    <hr width="100%" align="center">
     <br>
     <h2>Новости</h2>
     <h3>28.01.2024</h3>
