--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <br>
     <h2>Новости</h2>
     <h3>28.01.2024</h3>
+    
+    <hr width="75%" align="left">
+    <h3>28.01.2024 14:15</h3>
+    <h4>Лучшие пацаны года - забив</h4>
+    <img src="tema/lpg.jpg"/><br>
+    <a>https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI забивная группа</a>
   </body>
 </html>
