--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   </instructions>
   <head>
     <title>УЛЬТИМА 🔝</title>
+    <link rel="icon" href="/logo.jpg" sizes="any">
+    <link rel="shortcut icon" href="/logo.jpg" sizes="any">
+    <link rel="icon" href="logo.jpg" sizes="any">
+    <link rel="shortcut icon" href="logo.jpg" sizes="any">
   </head>
   <body bgcolor="#b38fab"/>
     <h1 href=https://ultimatop.github.io/group><img src="logo.jpg" width="70" heigh="70">УЛЬТИМА</h1>
