--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <h3>28.01.2024 14:15</h3>
     <h4>Лучшие пацаны года - забив</h4>
     <img src="tema/lpg.jpg" width="450" heigh="450"/><br>
-    <a>https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI забивная группа</a>
+    <a href="https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI">https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI забивная группа</a>
   </body>
 </html>
