--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body bgcolor="#b38fab"/>
     <h1 href=https://ultimatop.github.io/group><img src="logo.jpg" width="70" heigh="70">УЛЬТИМА</h1>
-    <input id="search" name="search" type="text" size="40" align="right">
+    <input id="search" name="search" type="text" size="40" align="right" placeholder="Powered by DM Searcher">
     <button id="run" name="search_b">Искать собыие</button>
     <hr width="100%" align="center">
     <br>
