--- a/index.html
+++ b/index.html
@@ -24,5 +24,10 @@
     <h4>Лучшие пацаны года - забив</h4>
     <img src="tema/lpg.jpg" width="450" heigh="450"/><br>
     <a href="https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI">https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI забивная группа</a>
+    <script language="JavaScript">
+      document.getElementById("run").addEventListener("click", function() {
+        var fragmentValue = document.getElementById("search").value;
+        window.location.hash = fragmentValue;
+      });
   </body>
 </html>
