--- a/index.html
+++ b/index.html
@@ -24,10 +24,22 @@
     <h4 name="Забив">Лучшие пацаны года - забив</h4>
     <img src="tema/lpg.jpg" width="450" heigh="450"/><br>
     <a href="https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI">https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI забивная группа</a>
-    <script language="JavaScript">
-      document.getElementById("run").addEventListener("click", function() {
-        var fragmentValue = document.getElementById("search").value;
-        window.location.hash = fragmentValue;
-      });
+    <hr width="100%" align="center">
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+     m[i].l=1*new Date();
+     for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+     k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+     ym(96285936, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true
+     });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/96285936" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
   </body>
 </html>
