--- a/index.html
+++ b/index.html
@@ -25,21 +25,15 @@
     <img src="tema/lpg.jpg" width="450" heigh="450"/><br>
     <a href="https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI">https://chat.whatsapp.com/IjjiF9kMIs95sO2d0ogyQI забивная группа</a>
     <hr width="100%" align="center">
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-     m[i].l=1*new Date();
-     for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-     k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-     ym(96285936, "init", {
-          clickmap:true,
-          trackLinks:true,
-          accurateTrackBounce:true
-     });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/96285936" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+    <!--LiveInternet counter--><a href="https://www.liveinternet.ru/click"
+      target="_blank"><img id="licnt1084" width="88" height="31" style="border:0" 
+      title="LiveInternet: показано число просмотров и посетителей за 24 часа"
+      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+      alt=""/></a><script>(function(d,s){d.getElementById("licnt1084").src=
+      "https://counter.yadro.ru/hit?t52.6;r"+escape(d.referrer)+
+      ((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+      (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+      ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+      (document,screen)</script><!--/LiveInternet-->
   </body>
 </html>
