--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
   </head>
   <body bgcolor="#b38fab"/>
     <h1 href=https://ultimatop.github.io/group><img src="logo.jpg" width="70" heigh="70">УЛЬТИМА</h1>
+    <hr width="100%" align="center">
     <input id="search" name="search" type="text" size="40" align="right" placeholder="Powered by DM Searcher">
     <button id="run" name="search_b">Искать собыие</button>
     <hr width="100%" align="center">
+    <a href="https://chat.whatsapp.com/ByRpaMsEme387A6HiM1xMY"><button>УЛЬТИМА</button></a>
+    <hr width="100%" align="center">
     <br>
     <h2>Новости</h2>
-    <h3>28.01.2024</h3>
-    
+    <h3>29.01.2024</h3>
+    <h4>Самая матная группа: Логово Ульты</h4>
     <hr width="75%" align="left">
+    
     <h3>28.01.2024 14:15</h3>
     <h4 name="Забив">Лучшие пацаны года - забив</h4>
     <img src="tema/lpg.jpg" width="450" heigh="450"/><br>
