--- a/logovo/index.html
+++ b/logovo/index.html
@@ -6,7 +6,7 @@
   <head>
     <title>Логово Ульты</title>
   </head>
-  <body bgcolor="#acb0a5>
+  <body bgcolor="#acb0a5">
     
   </body>
 </html>
