--- a/logovo/index.html
+++ b/logovo/index.html
@@ -7,6 +7,6 @@
     <title>Логово Ульты</title>
   </head>
   <body bgcolor="#acb0a5">
-    
+    <h1 href="https://ultimatop.github.io/group/logovo"><img src="logo50x50.jpg"/>Логово Ульты</h1>
   </body>
 </html>
