--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
       (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
       ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
       (document,screen)</script><!--/LiveInternet-->
+    <a align="center">Powered by DMI, ИП ПУПКИН В. В. (2023-2024)</a>
   </body>
 </html>
