--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       (s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
       ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
       (document,screen)</script><!--/LiveInternet-->
-    <a align="center">Powered by DMI, ИП ПУПКИН В. В. (2023-2024)</a>
+    <a align="center">Powered by DMI (2019-2024), ИП ПУПКИН В. В. (2023-2024)</a>
+    <a href="diamondmount.github.io/home">DMI Official site</a>
   </body>
 </html>
