--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
       ";h"+escape(d.title.substring(0,150))+";"+Math.random()})
       (document,screen)</script><!--/LiveInternet-->
     <a align="center">Powered by DMI (2019-2024), ИП ПУПКИН В. В. (2023-2024)</a>
-    <a href="diamondmount.github.io/home">DMI Official site</a>
+    <a href="http://diamondmount.github.io/home">DMI Official site</a>
   </body>
 </html>
